--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    display: none;
 }
 
 .login {
@@ -63,11 +62,13 @@
     height: 100vh;
     display: flex;
     flex-direction: row;
+    background-color: rgb(235, 235, 235);
 }
 
 .lateral-bar{
     min-width: 300px;
     border-right: 1px solid black;
+    background-color: #fff;
 }
 
 .lateral-bar > nav > ul{
@@ -87,13 +88,12 @@
 }
 
 .background{
-    width: 100vw;
+    width: 77vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(235, 235, 235);
-    display: none;
+    
 }
 
 .background > p {
@@ -104,13 +104,17 @@
 
 /* PRODUTOS */
 
+
 .background-produtos{
     width: 100vw;
     padding-left: 30px;
+    display: none;
 }
 
 .title-produtos{
     border-bottom: 1px solid #000;
+    font-weight: bold;
+    font-size: 25px;
 }
 
 .options-menu{
@@ -167,7 +171,7 @@
 
 .name{
     border: 1px solid black;
-    width: 50%;
+    width: 60%;
     text-align: center;
 }
 
@@ -179,9 +183,30 @@
 
 .amount{
     border: 1px solid black;
-    width: 20%;
+    width: 10%;
     text-align: center;
 }
 
-/* ACTIVE */
+/* MOVIMENTACAO */
 
+.background-movimentacao{
+    width: 100vw;
+    padding-left: 30px;
+    display: none;
+}
+
+.date{
+    border: 1px solid black;
+    width: 10%;
+    text-align: center;
+}
+
+
+
+.section-display{
+    display: none;
+}
+
+.active{
+    display: block;
+}
