--- a/assets/style.css
+++ b/assets/style.css
@@ -214,3 +214,49 @@
 .active{
     display: block;
 }
+
+
+.incluir-display{
+    display: none;
+    position: absolute;
+    bottom: 700px;
+    left: 900px;
+    border: 1px solid #000;
+}
+
+
+.incluir{
+    width: 300px;
+    height: 250px;
+    background-color: #fff;
+    
+}
+
+.inputs-incluir{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0px;
+}
+
+.input-box{
+    display: flex;
+    flex-direction: column;
+}
+
+.-btn{
+    margin-left: 20px;
+    padding: 10px 20px;
+    text-align: center;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.-btn:hover{
+    background-color: rgb(197, 197, 197);
+}
+
+.incluirAct{
+    display: block;
+}
