--- a/assets/style.css
+++ b/assets/style.css
@@ -187,7 +187,7 @@
 
 .name{
     border: 1px solid black;
-    width: 60%;
+    width: 40%;
     text-align: center;
 }
 
@@ -201,6 +201,37 @@
     border: 1px solid black;
     width: 10%;
     text-align: center;
+}
+
+.alterar{
+    border: 1px solid black;
+    width: 10%;
+    text-align: center;
+    cursor: pointer;
+    background-color: rgba(8, 192, 238, 0.493);
+}
+
+.alterar:hover{
+    background-color: rgb(8, 192, 238);
+}
+
+.deletar{
+    border: 1px solid black;
+    width: 10%;
+    text-align: center;
+    cursor: pointer;
+    background-color: rgba(255, 0, 0, 0.493);
+}
+
+.deletar:hover{
+    background-color: rgb(255, 0, 0);
+}
+
+.alterar-off, .deletar-off{
+    border: 1px solid black;
+    width: 10%;
+    text-align: center;
+    background-color: rgb(235, 235, 235);
 }
 
 /* MOVIMENTACAO */
